style.css
/*CSS reset settings here*/
*{
    margin: 0px;
    padding: 0px;
    font-family: arial;
    font-size: 11pt;
    }
    input {
        text-align: center;
    }
    #wrapper {
        margin: auto;
        width: 970px;
        height: auto;
        background-color: #245076;
    }
    #header {
        display: block;
        height: 150px;
    }
    #logo {
        display: inline-block;
    }
    .logo {
        max-width: 450px;
        margin: 20px;
    }
    #size {
        display: inline-block;
        position: relative;
        top: 10px;
        left: 260px;
        vertical-align: top;
        color: #FFF;
    }
    #size a{
        color: #C1AF48;
    }
    #size span {
        color: #000;
    }
    #search {
        display: inline-block;
        position: relative;
        bottom: 90px;
        left: 15px;
        padding-top: 20px;
        height: 50px;
        width: 275px;
        background-color: #444444;
        border-radius: 5px;
        box-shadow: 3px 3px 1px #1F2327;
        text-align: center;
    }
    #searchbox {
        height: 30px;
        color: #c8c8c8;
        font-size: 10pt;
        border: 3px inset;
    }
    #go {
        height: 30px;
        width: 40px;
        background-color: #245076;
        color: #FFF;
        font-size: 9pt;
        border-radius: 5px;
    }
    #nav {
        margin: 0px auto 10px auto;
        padding-top: 12px;
        height: 35px;
        width: 840px;
        background: linear-gradient(#3776AD, rgb(79, 129, 175), #3776AD);
        border-radius: 5px;
        box-shadow: 3px 3px 1px #1F2327;
        text-align: center;
    }
    #nav a {
        padding: 0px 30px 0px 10px;
        color: #FFF;
        font-size: 15pt;
        text-decoration: none;
    }
    #nav li {
        display: inline;
        vertical-align: middle;
    }
    #subnav {
        display: inline-block;
        margin: 35px 0px 0px 50px;
        position: relative;
        top: 0px;
        width: 200px;
        text-align: center;
    }
    #subnav a{
        color: #FFF;
        font-size: 14pt;
        font-weight: 200;
    }
    #subnav ul {
        list-style: none;
    }
    #subnav li {
        color: #FFF;
        line-height: 25px;
    }
    #subnav ul li:before {
        color: #C2AF47;
        content: "\00BB \0020";
    }
    #bio {
        display: inline-block;
        vertical-align: top;
        margin: 20px 0px 0px 10px;
        width: 635px;
        text-align: center;
        color: #FFF;
    }
    #bio ul {
        list-style: none;
    }
    #bio li {
        padding: 0px 0px 10px 0px;
        color: #C2AF47;
        font-size: 14pt;
        font-style: italic;
    }
    #bio span {
        font-size: 14pt;
    }
    #sub {
        margin: 20px 0px 0px 0px;
        width: 970px;
        background-color: #FFF;
    }
    .content {
        display: inline-block;
        position: relative;
        vertical-align: top;
        margin: 10px 30px 0px 10px;
        padding: 0px 50px 0px 50px;
        height: 200px;
        width: 305px;
        text-align: center;
    }
    .content h3 {
        padding: 5px 0px 5px 0px;
        width: 400px;
        font-size: 12pt;
        border-top: 4px solid #73A7D5;
        border-radius: 2px;
    }
    .content p {
        margin: 0px 0px 0px 67px;
        font-size: 10pt;
    }
    .content ul {
        margin: 0px 0px 0px 90px;
        list-style: square;
        text-align: center;
    }
    .content li {
        font-size: 12pt;
    }
    .content a {
        color: #8CB6DC;
        font-size: 9pt;
        text-decoration: none;
    }
    #footer {
        padding: 40px 0px 5px 0px;
        text-align: center;
        background: linear-gradient(#245076, #3374AB)
    }
    #footer ul {
        list-style: none;
    }
    #footer li {
        display: inline;
    }
    #footer a {
        padding: 0px 20px 20px 20px;
        color: #8CB6DC;
        font-size: 12pt;
    }
    #footer span {
        font-size: 7pt;
        color: #8CB6DC;
    }

